--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,13 @@
     "next": "13.4.0",
     "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24"
+    "postcss": "^8.4.24",
+    "framer-motion": "^10.16.4",
+    "react-hot-toast": "^2.4.1",
+    "react-hook-form": "^7.47.0",
+    "lucide-react": "^0.292.0",
+    "clsx": "^2.0.0",
+    "tailwind-merge": "^2.0.0"
   },
   "scripts": {
     "dev": "next dev",
