Fix Vercel config: Update to version 3 with proper functions configuration

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,15 @@
 {
-  "version": 2,
+  "version": 3,
+  "name": "trackas",
   "buildCommand": "cd frontend && npm install && npm run build",
   "outputDirectory": "frontend/.next",
   "installCommand": "cd frontend && npm install",
   "framework": "nextjs",
   "functions": {
     "api/**/*.js": {
-      "maxDuration": 30
+      "runtime": "nodejs18.x",
+      "maxDuration": 30,
+      "memory": 1024
     }
   },
   "rewrites": [
