--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,11 +1,6 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/next"
-    }
-  ],
+  "version": 3,
+  "name": "trackas-frontend",
   "routes": [
     {
       "src": "/api/(.*)",
@@ -17,7 +12,9 @@
   },
   "functions": {
     "pages/api/**/*.js": {
-      "maxDuration": 30
+      "runtime": "nodejs18.x",
+      "maxDuration": 30,
+      "memory": 1024
     }
   },
   "regions": ["iad1"]
